<resources>
    <string name="app_name">CS361_final</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gmail">Gmail</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="editProfile">Edit Profile</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="context">Context</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="confirmPass_warn">Password and confirm password must be the same</string>
</resources>